--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -206,7 +206,7 @@
             android:text="Register With Google"
             app:icon="@drawable/ic_google"
             app:iconTintMode="multiply"
-            app:iconGravity="start"
+            app:iconGravity="textStart"
             android:fontFamily="@font/roboto"
             android:textStyle="bold"
             app:strokeWidth="1dp"
