Create_Detail&Update_signUp_login Commit

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,8 +22,8 @@
 
         <ImageView
             android:id="@+id/iv_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="288dp"
+            android:layout_height="233dp"
             android:src="@drawable/app_logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="@string/hello_welcome"
             android:textColor="@color/blue"
-            android:textSize="@dimen/_24ssp"
+            android:textSize="@dimen/_20ssp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_logo"
             android:layout_marginTop="@dimen/_24sdp"
@@ -64,9 +64,8 @@
                 android:hint="@string/email_address"
                 android:layout_gravity="start"
                 android:fontFamily="@font/roboto"
-                android:paddingHorizontal="@dimen/_8sdp"
                 android:inputType="textEmailAddress"
-                android:layout_marginTop="@dimen/_16sdp"/>
+                android:layout_marginTop="@dimen/_24sdp"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,8 +87,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
-                android:fontFamily="@font/roboto"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/roboto"
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:paddingHorizontal="@dimen/_8sdp" />
@@ -101,16 +100,17 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
-            android:text="Login"
+            android:text="@string/login"
             android:fontFamily="@font/roboto"
             android:textStyle="bold"
             android:backgroundTint="@color/blue"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@id/tl_password"
             app:layout_constraintBottom_toTopOf="@id/divider"
-            android:layout_marginHorizontal="@dimen/_24sdp"
+            android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            android:layout_marginBottom="@dimen/_8sdp"/>
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:textAllCaps="false"/>
 
         <LinearLayout
             android:id="@+id/divider"
@@ -136,7 +136,7 @@
                 android:layout_weight=".5"
                 android:fontFamily="@font/roboto"
                 android:textColor="@color/black"
-                android:text="Or"/>
+                android:text="@string/or"/>
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -146,23 +146,25 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.Icon"
             android:id="@+id/btn_google"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_44sdp"
-            android:text="Login With Google"
-            app:icon="@drawable/ic_google"
-            app:iconTintMode="multiply"
-            app:iconGravity="textStart"
-            android:fontFamily="@font/roboto"
-            android:textStyle="bold"
-            app:strokeWidth="1dp"
+            android:layout_marginHorizontal="@dimen/_16sdp"
+            android:layout_marginBottom="8dp"
             android:backgroundTint="@color/white"
-            app:strokeColor="@color/blue"
+            android:fontFamily="@font/roboto"
+            android:text="@string/login_with_google"
+            android:textAllCaps="false"
             android:textColor="@color/black"
+            android:textStyle="bold"
+            app:icon="@drawable/ic_google"
+            app:iconGravity="textStart"
+            app:iconTintMode="multiply"
             app:layout_constraintBottom_toTopOf="@id/linear_info_register"
-            android:layout_marginHorizontal="@dimen/_24sdp"
-            android:layout_marginBottom="@dimen/_16sdp"/>
+            app:strokeColor="@color/blue"
+            app:strokeWidth="1dp"
+            tools:layout_editor_absoluteX="21dp" />
 
         <LinearLayout
             android:id="@+id/linear_info_register"
@@ -171,7 +173,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center_horizontal"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginBottom="@dimen/_16sdp"
             android:orientation="horizontal">
@@ -181,7 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/have_an_account"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_12ssp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
                 android:id="@+id/tv_register"
@@ -189,7 +190,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/register_here"
                 android:textColor="@color/blue"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_12ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:gravity="center_horizontal"
                 android:layout_marginStart="@dimen/_2sdp"/>
