--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -23,8 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_weight=".25"
         android:lineSpacingExtra="@dimen/_8ssp"
-        android:text="Title Text"
-        android:textSize="@dimen/_16ssp"
+        android:text="Onboarding"
+        android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:fontFamily="@font/comfortaa"
