--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
     tools:context=".ui.auth.SignUpFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,82 +19,73 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="228dp"
+            android:layout_height="233dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/logo"
             android:src="@drawable/il_register"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/_24sdp"
-            android:contentDescription="@string/logo" />
-
-        <TextView
-            android:id="@+id/tv_create_account"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/create_account"
-            android:textColor="@color/blue"
-            android:textSize="@dimen/_24ssp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_logo"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:layout_marginStart="@dimen/_16sdp"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tl_name"
             android:layout_width="match_parent"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:layout_height="@dimen/_44sdp"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginVertical="@dimen/_16sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:boxStrokeColor="@color/blue"
-            app:startIconDrawable="@drawable/ic_person"
+            android:layout_marginTop="32dp"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:outlineAmbientShadowColor="@color/blue"
-            app:layout_constraintTop_toBottomOf="@id/tv_create_account">
+            app:boxStrokeColor="@color/blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
+            app:startIconDrawable="@drawable/ic_person">
 
             <EditText
                 android:id="@+id/ed_register_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/register_name"
                 android:layout_gravity="start"
+                android:layout_marginTop="@dimen/_16sdp"
                 android:fontFamily="@font/roboto"
-                android:paddingHorizontal="@dimen/_8sdp"
+                android:hint="@string/register_name"
                 android:inputType="textPersonName"
-                android:layout_marginTop="@dimen/_16sdp"/>
+                android:paddingHorizontal="@dimen/_8sdp"
+                android:autofillHints="" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tl_email"
             android:layout_width="match_parent"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:layout_height="@dimen/_44sdp"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginVertical="@dimen/_16sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:boxStrokeColor="@color/blue"
-            app:startIconDrawable="@drawable/ic_email"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:outlineAmbientShadowColor="@color/blue"
-            app:layout_constraintTop_toBottomOf="@id/tl_name">
+            app:boxStrokeColor="@color/blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tl_name"
+            app:startIconDrawable="@drawable/ic_email">
 
             <com.bangkit.jajanjalan.util.customview.EmailCustomView
                 android:id="@+id/ed_register_email"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/email_address"
                 android:layout_gravity="start"
+                android:layout_marginTop="@dimen/_16sdp"
                 android:fontFamily="@font/roboto"
-                android:paddingHorizontal="@dimen/_8sdp"
+                android:hint="@string/email_address"
                 android:inputType="textEmailAddress"
-                android:layout_marginTop="@dimen/_16sdp"/>
+                android:paddingHorizontal="@dimen/_8sdp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,23 +95,24 @@
             android:layout_height="@dimen/_44sdp"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginVertical="@dimen/_16sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:boxStrokeColor="@color/blue"
-            app:passwordToggleEnabled="true"
-            app:startIconDrawable="@drawable/ic_password"
             android:outlineAmbientShadowColor="@color/blue"
-            app:layout_constraintTop_toBottomOf="@id/tl_email">
+            app:boxStrokeColor="@color/blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tl_email"
+            app:passwordToggleEnabled="true"
+            app:startIconDrawable="@drawable/ic_password">
 
             <EditText
                 android:id="@+id/ed_register_password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
-                android:fontFamily="@font/roboto"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/roboto"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:paddingHorizontal="@dimen/_8sdp" />
+                android:paddingHorizontal="@dimen/_8sdp"
+                android:autofillHints="" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -129,67 +122,71 @@
             android:layout_height="@dimen/_44sdp"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginVertical="@dimen/_16sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:boxStrokeColor="@color/blue"
-            app:passwordToggleEnabled="true"
-            app:startIconDrawable="@drawable/ic_password"
             android:outlineAmbientShadowColor="@color/blue"
-            app:layout_constraintTop_toBottomOf="@id/tl_password">
+            app:boxStrokeColor="@color/blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tl_password"
+            app:passwordToggleEnabled="true"
+            app:startIconDrawable="@drawable/ic_password">
 
             <EditText
                 android:id="@+id/ed_register_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
-                android:fontFamily="@font/roboto"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/roboto"
                 android:hint="@string/confirm_password"
                 android:inputType="textPassword"
-                android:paddingHorizontal="@dimen/_8sdp" />
+                android:paddingHorizontal="@dimen/_8sdp"
+                android:autofillHints="" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.Icon"
             android:id="@+id/btn_register"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
-            android:text="Register Now"
-            android:fontFamily="@font/roboto"
-            android:textStyle="bold"
+            android:layout_marginHorizontal="@dimen/_16sdp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="@color/blue"
+            android:fontFamily="@font/roboto"
+            android:text="@string/register"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/tl_confirm_password"
-            app:layout_constraintBottom_toTopOf="@id/divider"
-            android:layout_marginHorizontal="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:layout_marginBottom="@dimen/_8sdp"/>
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tl_confirm_password" />
 
         <LinearLayout
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:paddingHorizontal="24dp"
             android:layout_marginBottom="@dimen/_8sdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingHorizontal="24dp"
             app:layout_constraintBottom_toTopOf="@id/btn_register_google"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
                 app:dividerColor="@color/grey" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:layout_weight=".5"
                 android:fontFamily="@font/roboto"
-                android:textColor="@color/black"
-                android:text="Or"/>
+                android:text="@string/or"
+                android:textAlignment="center"
+                android:textColor="@color/black" />
+
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -199,53 +196,56 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.Icon"
             android:id="@+id/btn_register_google"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_44sdp"
-            android:text="Register With Google"
-            app:icon="@drawable/ic_google"
-            app:iconTintMode="multiply"
-            app:iconGravity="textStart"
-            android:fontFamily="@font/roboto"
-            android:textStyle="bold"
-            app:strokeWidth="1dp"
+            android:layout_marginHorizontal="@dimen/_16sdp"
+            android:layout_marginTop="48dp"
             android:backgroundTint="@color/white"
-            app:strokeColor="@color/blue"
+            android:fontFamily="@font/roboto"
+            android:text="@string/register_with_google"
+            android:textAllCaps="false"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@id/linear_info_register"
-            android:layout_marginHorizontal="@dimen/_24sdp"
-            android:layout_marginBottom="@dimen/_16sdp"/>
+            android:textStyle="bold"
+            app:icon="@drawable/ic_google"
+            app:iconGravity="textStart"
+            app:iconTintMode="multiply"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_register"
+            app:strokeColor="@color/blue"
+            app:strokeWidth="1dp" />
 
         <LinearLayout
             android:id="@+id/linear_info_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center_horizontal"
             android:layout_marginHorizontal="@dimen/_16sdp"
-            android:layout_marginBottom="@dimen/_16sdp"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/btn_register_google"
+            tools:layout_editor_absoluteX="21dp">
 
             <TextView
                 android:id="@+id/tv_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/already_have_an_account"
-                android:textSize="@dimen/_14ssp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:textSize="@dimen/_12ssp"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
             <TextView
                 android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:gravity="center_horizontal"
                 android:text="@string/login_now"
                 android:textColor="@color/blue"
-                android:textSize="@dimen/_14ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:gravity="center_horizontal"
-                android:layout_marginStart="@dimen/_2sdp"/>
+                android:textSize="@dimen/_12ssp"
+                app:layout_constraintBottom_toBottomOf="parent" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
