--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgrounds">#F5F5F5</color>
     <color name="blue">#068FFF</color>
     <color name="blueLight">#A8D8FF</color>
     <color name="midnightBlue">#5E48E8</color>
